--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -37,23 +37,78 @@ nav a {
     padding-right:20px;
 }
 #banner {
-        display:flex;
-        justify-content:center;
-        background-image:url('../image/face.jpg');
-        background-position:center;
-        background-size:cover;
-        height:550px;
+    display:flex;
+    justify-content:center;
+    background-image:url('../image/face.jpg');
+    background-position:center;
+    background-size:cover;
+    height:550px;
 }
-    
-
-
-
-
-
-
-
-
-
+aside {
+    display: flex;
+    align-self: center;
+    margin-top:70px;
+    height:700px;
+    width:990px; 
+}
+aside .news_text {
+    display: flex;
+    flex-direction:column;
+    margin-left: 20px;
+}
+aside .news_title {
+    display:flex;
+    font-size:33px;
+    margin-bottom:30px;
+}
+aside .news_resume {
+    display:flex;
+    align-items:center;
+    font-size:20px;
+    margin-bottom:35px;
+}
+aside .news_list {
+    font-size:20px;
+    line-height:40px;
+}
+aside li {
+    list-style:none;
+    text-align: left;
+}
 footer {
+    display:flex;
+    justify-content: center;
     height:200px;
+    background-color:#000000;    
+}
+.footer_news {
+    display:block;
+    flex-direction: column;
+    justify-content:center;
+    width:990px;
+}
+.footer_contact {
+    display:flex;
+    flex-direction: column;
+    height:70px;
+    margin-top:20px;
+    margin-left:10px;
+    line-height:30px;
+}
+.footer_contact a {
+    text-decoration:none;
+    text-align:center;
+    color:#FFFFFF;
+}
+.footer_location {
+    text-align:center;
+    height:70px;
+    margin-left:10px;
+    color:#FFFFFF;
+}
+.footer_copy {
+    text-align:center;
+    margin-left:10px;
+    color:#5c5c5c;
+    font-size:13px;
 }
